# health_vision

backend/: .env  .env.example  .gitignore  Taskfile.yml  docker-compose.yaml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2aae440ab2ea_init.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/auth/: route.py
backend/app/api/v1/email_verification/: __init__.py  route.py
backend/app/api/v1/password/: __init__.py  route.py
backend/app/api/v1/user/: route.py
backend/app/controllers/: auth.py
backend/app/core/: config.py  server.py
backend/app/core/db/: session.py
backend/app/core/db/mixins/: __init__.py  primary_key_mixin.py  timestamp_mixin.py
backend/app/core/dependencies/: __init__.py  authentication.py  factory.py
backend/app/core/factory/: __init__.py  factory.py
backend/app/core/middlewares/: __init__.py  authentication.py  cors.py  middleware.py
backend/app/models/: __init__.py  user.py
backend/app/repositories/: base.py  user.py
backend/app/schemas/: auth.py  user.py  users.py
backend/app/services/: auth_service.py
backend/app/utils/: __init__.py  jwt.py  password.py
backend/keys/: private.example.pem  publice.example.pem
web/: biome.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/(auth)/login/: page.tsx
web/src/app/(auth)/register/: page.tsx
web/src/app/(home)/: layout.tsx
web/src/app/(home)/@private/: page.tsx
web/src/app/(home)/@public/: page.tsx
web/src/features/auth/: constants.ts
web/src/features/auth/api/: index.ts
web/src/features/auth/components/: auth-layout.tsx  login-form.tsx  register-form.tsx  social-button.tsx
web/src/features/auth/components/ui/: icons.tsx
web/src/features/auth/hooks/: use-auth.ts
web/src/lib/axios/: index.ts
web/src/lib/providers/: query-client.ts  tanstack-query-provider.tsx
